--- a/src/CSS/Hero.css
+++ b/src/CSS/Hero.css
@@ -3,18 +3,18 @@
     padding: 0 8%;
 }
 
-h3 {
+.Hero > h3 {
     color: #0074B7;
     margin-bottom: 15px;
     margin-top: 25px;
 }
 
-h1 {
+.Hero > h1 {
     color: #333;
     margin-top: 0;
 }
 
-button {
+.hero__button {
     background-color: #163C5E;
     color: #f2f2f2;
     padding: 2% 10%;
