--- a/src/CSS/Global_Components/Navbar.css
+++ b/src/CSS/Global_Components/Navbar.css
@@ -20,14 +20,16 @@
     
     .logo { 
         grid-area: 1 / 1 / 2 / 2; 
-        padding-left: 25%;
+        padding-left: 32px;
     }
 
     .burger__menu { 
         grid-area: 1 / 2 / 2 / 4; 
         align-self: center;
         justify-self: end;
-        padding-right: 25%;
+        /* padding-right: 15%; */
+        padding-right: 32px;
+
     }
 
     /* ===================================================
