--- a/src/CSS/TeamMember.css
+++ b/src/CSS/TeamMember.css
@@ -26,7 +26,9 @@
         height: 50%;
     }
 
-    .member__Name, .member__Bio {
+    .member__Name, 
+    .member__Bio,
+    .member__Title {
         text-align: center;
     }
 
