Added photos for Allison and I addded Prices.js with CSS

--- a/src/CSS/TeamMember.css
+++ b/src/CSS/TeamMember.css
@@ -19,6 +19,7 @@
     .member__Img {
         display: flex;
         justify-content: center;  
+        padding-top: 5%;
     }
 
     .member__Img > img {
