--- a/src/CSS/MeetOurTeam.css
+++ b/src/CSS/MeetOurTeam.css
@@ -51,17 +51,18 @@
 
     .spa__services__container {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
         grid-template-rows: 1fr;
-        grid-column-gap: 10px;
+        grid-column-gap: 0px;
         grid-row-gap: 0px;
         }
         
         .div1 { grid-area: 1 / 1 / 2 / 2; }
         .div2 { grid-area: 1 / 2 / 2 / 3; }
+        .div3 { grid-area: 1 / 3 / 2 / 4; }
 
     .spa__services__container > .stylist__icon > a > img {
-        width: 50%;
+        width: 75%;
         height: auto;
         display: block; /* Center horizontally */
         margin: 0 auto; /* Center horizontally */
