--- a/src/CSS/AboutUs.css
+++ b/src/CSS/AboutUs.css
@@ -3,6 +3,13 @@
     color: #0074B7;
     font-size: 20px;
 }
+
+.section__image, .about__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .section__image > img {
     width: 95%;
     height: auto;
@@ -12,9 +19,27 @@
     text-align: center;
 }
 
-.aboutUs__button {
+/* .aboutUs__button {
     background-color: #163C5E;
     color: #f2f2f2;
     padding: 2% 10%;
     border-radius: 10px;
+} */
+
+.aboutUs__button {
+    background-color: #163C5E;
+    color: #f2f2f2;
+    padding: 10px 25px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    border: none; /* To remove the default browser styling for buttons */
+    text-decoration: none; /* To remove underline from text */
+    font-size: 1em; /* Adjust as needed */
+    text-align: center; /* To center the text inside the button */
+}
+
+
+.about__button {
+    padding: 5% 10%;
 }
