--- a/src/CSS/Global_Components/Navbar.css
+++ b/src/CSS/Global_Components/Navbar.css
@@ -18,9 +18,10 @@
     grid-row-gap: 0px;
     }
     
-    .logo { 
+    .navbar__container > .logo { 
         grid-area: 1 / 1 / 2 / 2; 
-        padding-left: 32px;
+        /* padding-left: 32px; */
+        display: flex;
     }
 
     .burger__menu { 
