updated files to give 'Select Your Team Member' Text and fix the CSS after this change.

--- a/src/CSS/Global_Components/Navbar.css
+++ b/src/CSS/Global_Components/Navbar.css
@@ -29,7 +29,7 @@
         align-self: center;
         justify-self: end;
         /* padding-right: 15%; */
-        padding-right: 32px;
+        padding-right: 8%;
 
     }
 
