--- a/src/CSS/Global_Components/Navbar.css
+++ b/src/CSS/Global_Components/Navbar.css
@@ -20,7 +20,7 @@
     
     .navbar__container > .logo { 
         grid-area: 1 / 1 / 2 / 2; 
-        /* padding-left: 32px; */
+        padding-left: 8%;
         display: flex;
     }
 
