--- a/src/CSS/Global_Components/Navbar.css
+++ b/src/CSS/Global_Components/Navbar.css
@@ -102,5 +102,13 @@
         border: 2px solid #ffd700;
         border-radius: 15px;
       }
+
+      .logo > a {
+        color: #f2f2f2;
+        font-size: 24px;
+        text-decoration: none;
+        /* padding: 2% 0; */
+        margin: 8% 0;
+      }
       
       
