All images optimized, nunu added and special services section now has been CSSd

--- a/src/CSS/MeetOurTeam.css
+++ b/src/CSS/MeetOurTeam.css
@@ -73,3 +73,21 @@
         margin: 0 auto; /* Center horizontally */
     }
         
+
+    .special__services__container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr;
+        grid-column-gap: 30px;
+        grid-row-gap: 0px;
+        }
+        
+        .div1 { grid-area: 1 / 1 / 2 / 2; }
+        .div2 { grid-area: 1 / 2 / 2 / 3; }
+
+        .special__services__container > .stylist__icon > a > img {
+            width: 75%;
+            height: auto;
+            display: block; /* Center horizontally */
+            margin: 0 auto; /* Center horizontally */
+        }
