--- a/src/CSS/Services.css
+++ b/src/CSS/Services.css
@@ -34,3 +34,13 @@
     justify-content: center;
     padding-bottom: 5%;
 }
+
+@media (min-width: 700px) {
+    .service > h2 {
+        font-size: 24px;
+    }
+
+    .service > p {
+        font-size: 18px;
+    }
+}
