added mb5px to footer links

--- a/src/CSS/Global_Components/Footer.css
+++ b/src/CSS/Global_Components/Footer.css
@@ -22,6 +22,7 @@
 .privacy_and_legal > .footer-link {
     color: #f2f2f2;
     text-decoration: none;
+    margin-bottom: 5px;
 }
 
 .pages > a, .privacy_and_legal {
