CSS added for on hover effects of buttons

--- a/src/CSS/DeskTeam.css
+++ b/src/CSS/DeskTeam.css
@@ -45,6 +45,10 @@
     font-size: 1em;
 }
 
+.category__container > button:hover {
+    background-color: hsl(207, 62%, 28%);
+}
+
 .barber__TeamMembers,
 .spa__TeamMembers,
 .special__TeamMembers {
