--- a/src/CSS/AboutUs.css
+++ b/src/CSS/AboutUs.css
@@ -62,3 +62,17 @@
         padding: 2% 10%;
     }
 }
+
+@media (min-width: 1000px) {
+    .AboutUs {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        }
+        
+        .div1 { grid-area: 1 / 1 / 4 / 2; }
+        .div2 { grid-area: 1 / 2 / 2 / 3; }
+        .div3 { grid-area: 2 / 2 / 4 / 3; }
+}
