--- a/src/CSS/Global_Components/Footer.css
+++ b/src/CSS/Global_Components/Footer.css
@@ -53,3 +53,66 @@
 .payment, .copyright {
     text-align: center;
 }
+
+@media (min-width: 1000px) {
+    .Footer {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: auto auto;
+        grid-gap: 20px;
+        padding: 0 32px; /* Adjust the padding as needed */
+    }
+
+    .Footer > .logo {
+        grid-column: 1 / 2;
+        grid-row: 1 / 3; /* Span two rows */
+        align-self: center; /* Center vertically within the grid area */
+        justify-self: start; /* Align to the start of the grid area */
+    }
+
+    .Footer .link__container {
+        grid-column: 2 / 5;
+        grid-row: 1 / 3;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto auto;
+        grid-gap: 20px;
+    }
+
+    .Footer .location {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .Footer .privacy_and_legal {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .Footer .pages {
+        grid-area: 1 / 2 / 3 / 3; /* Span two rows */
+    }
+
+    .Footer .follow__us {
+        grid-area: 1 / 3 / 2 / 4;
+    }
+
+    .Footer .payment {
+        grid-column: 5 / 6;
+        grid-row: 1 / 3; /* Span two rows */
+        align-self: center; /* Center vertically within the grid area */
+        justify-self: end; /* Align to the end of the grid area */
+    }
+
+    /* Additional adjustments to the footer links if needed */
+    .Footer .footer-link {
+        /* Styles for footer links */
+    }
+
+    /* Adjust the copyright position if necessary */
+    .Footer .copyright {
+        grid-column: 1 / -1; /* Span all columns */
+        justify-self: center;
+        padding: 20px 0; /* Add padding at the top and bottom */
+    }
+}
+
+
