--- a/src/CSS/Global_Components/Footer.css
+++ b/src/CSS/Global_Components/Footer.css
@@ -66,7 +66,6 @@
     .Footer > .logo {
         grid-column: 1 / 2;
         grid-row: 1 / 3; /* Span two rows */
-        align-self: center; /* Center vertically within the grid area */
         justify-self: start; /* Align to the start of the grid area */
     }
 
@@ -98,7 +97,6 @@
     .Footer .payment {
         grid-column: 5 / 6;
         grid-row: 1 / 3; /* Span two rows */
-        align-self: center; /* Center vertically within the grid area */
         justify-self: end; /* Align to the end of the grid area */
     }
 
@@ -112,6 +110,10 @@
         grid-column: 1 / -1; /* Span all columns */
         justify-self: center;
         padding: 20px 0; /* Add padding at the top and bottom */
+    }
+
+    .payment > img {
+        width: 100%;
     }
 }
 
