--- a/src/CSS/DeskTeam.css
+++ b/src/CSS/DeskTeam.css
@@ -137,6 +137,18 @@
         opacity: 1;
         color: #ffd700;
     }
+
+    .barber__TeamMembers .stylist__icon img,
+    .spa__TeamMembers .stylist__icon img {
+        transition: transform 0.3s ease;
+    }
+    
+    .barber__TeamMembers .stylist__icon:hover img,
+    .spa__TeamMembers .stylist__icon:hover img {
+        transform: translateY(-10px);
+    }
+    
+    
     
     
 }
