--- a/src/CSS/Prices.css
+++ b/src/CSS/Prices.css
@@ -33,3 +33,9 @@
         justify-content: space-between;
         align-items: center;
     }
+
+    @media (min-width: 1000px) {
+        .Prices > h2 {
+            margin-top: 2%;
+        }
+    }
