--- a/src/CSS/AboutPage.css
+++ b/src/CSS/AboutPage.css
@@ -16,3 +16,29 @@
     color: #0074B7;
     text-decoration: underline;
 }
+
+@media (min-width: 1000px) {
+    .AboutPage {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr;
+        grid-column-gap: 30px;
+        grid-row-gap: 0px;
+        }
+        
+        .div1 { grid-area: 1 / 1 / 2 / 3; }
+        .div2 { grid-area: 1 / 1 / 2 / 2; }
+        .div3 { grid-area: 1 / 2 / 2 / 3; }
+
+    .desktop__image__container {
+        width: 100%;
+        height: auto;
+    }
+
+    .desktop__image__container > img {
+        width: 100%;
+        height: auto;
+        object-fit: contain; /* This will ensure the entire image is visible */
+    }
+
+}
