--- a/src/CSS/Global_Components/Footer.css
+++ b/src/CSS/Global_Components/Footer.css
@@ -53,6 +53,10 @@
     text-align: center;
 }
 
+
+.payment > img {
+    width: 50%;
+}
 @media (min-width: 1000px) {
     .Footer {
         display: grid;
